kubernetes/product/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: my.app.com
    http:
      paths:
      - pathType: Prefix
        path: /products
        backend:
          service:
            name: products
            port:
              number: 8080
